--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                      <div>Тарантов</div>
                   </div>
                   <div>
-                     <div class="list"><span>age</span><span>:</span><span>22</span></div>
-                     <div class="list"><span>work</span><span>:</span><span>qa-engineer</span></div>
-                     <div class="list"><span>Power</span><span>:</span><span>Postman, SQL, HTML</span></div>
-                     <div class="list"><span>location</span><span>:</span><span>Moscow</span></div>
+                     <div class="list"><span>Возрост</span><span>:</span><span>22</span></div>
+                     <div class="list"><span>Работа</span><span>:</span><span>тестировщик</span></div>
+                     <div class="list"><span>Сила</span><span>:</span><span>Postman, SQL, HTML</span></div>
+                     <div class="list"><span>Город</span><span>:</span><span>Москва</span></div>
 
                   </div>
                </div>
